--- a/style.css
+++ b/style.css
@@ -25,11 +25,16 @@
 
 h1 {
   margin: 1rem 0;
+  font-family: "Poppins", sans-serif;
 }
 h2 {
   font-family: "Poppins", sans-serif;
   font-size: 5rem;
   margin: 0.2rem 0;
+}
+.alpha {
+  letter-spacing: 0.2rem;
+  font-family: "Poppins", sans-serif;
 }
 .head {
   margin: 3rem 3rem;
