--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h2 {
   font-size: 5rem;
   margin: 0.2rem 0;
 }
-.alpha {
+span {
   letter-spacing: 0.2rem;
   font-family: "Poppins", sans-serif;
 }
